# Lolipop

./: CMakeLists.txt  Lolipop.html  Lolipop.js  README.md
src/: Channel.cpp  Channel.h  ControlWidget.cpp  ControlWidget.h  MainWindow.cpp  MainWindow.h  ProgressSlider.cpp  ProgressSlider.h  ProgressSliderStyle.cpp  ProgressSliderStyle.h  UrlDialog.cpp  UrlDialog.h  VideoView.cpp  VideoView.h  main.cpp
src/QtTheme/: QtTheme.qrc
src/resource/: resource.qrc
